--- a/src/ugeneui/html/version_news_en.html
+++ b/src/ugeneui/html/version_news_en.html
@@ -20,5 +20,9 @@
 -->
 <h3>Changes in UGENE v. 37</h3>
 <ul>
-    <li>TODO.</li>
+    <li>External tools update: blast, bowtie, mafft, hmmer3, etc…</li>
+    <li>Improved Copy/Paste functionality in Alignment Editor.</li>
+    <li>Support for conversion of DNA alignments to RNA and back.</li>
+    <li>Usability improvements for import and export from remote database.</li>
+    <li>Minor UI improvements in Alignment Editor and Sequence Viewer.</li>
 </ul>
