--- a/src/ugeneui/html/version_news_ru.html
+++ b/src/ugeneui/html/version_news_ru.html
@@ -20,5 +20,9 @@
 -->
 <h3>Изменения в UGENE версии 37</h3>
 <ul>
-    <li>TODO</li>
+    <li>Обновление внешних инструментов: blast, bowtie, mafft, hmmer3, etc…</li>
+    <li>Улучшен функционал копирования и вставки в Редакторе Выравниваний.</li>
+    <li>Поддержана конвертация ДНК выравниваний в РНК и обратно.</li>
+    <li>Улучшена поддержка импорта и экспорта при работе с сетевой базой данных.</li>
+    <li>Небольшие улучшения в интерфейсе Редактора Выравниваний и Редакторе Последовательностей.</li>
 </ul>
