--- a/src/ugeneui/html/version_news_ru.html
+++ b/src/ugeneui/html/version_news_ru.html
@@ -18,11 +18,31 @@
  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
  MA 02110-1301, USA.
 -->
-<h3>Изменения в UGENE версии 37</h3>
+<h3>Изменения в UGENE версии 38</h3>
+
+<h4>Редактор Выравниваний</h4>
 <ul>
-    <li>Обновление внешних инструментов: blast, bowtie, mafft, hmmer3, etc…</li>
-    <li>Улучшен функционал копирования и вставки в Редакторе Выравниваний.</li>
-    <li>Поддержана конвертация ДНК выравниваний в РНК и обратно.</li>
-    <li>Улучшена поддержка импорта и экспорта при работе с сетевой базой данных.</li>
-    <li>Небольшие улучшения в интерфейсе Редактора Выравниваний и Редакторе Последовательностей.</li>
+    <li>Расширен функционал копирования и вставки.</li>
+    <li>Добавлена сортировка по длине и начальным гэпам.</li>
+    <li>Добавлена конвертация ДНК-выравнивания в РНК-алфавит.</li>
+    <li>При экспорте ДНК-выравнивания в амино-представление добавлен выбор таблицы трансляции.</li>
+    <li>Добавлены альтернативные опции обработки гэпов при экспорте ДНК-выравниваний в амино-представление.</li>
+    <li>Улучшено масштабирование текста на мониторах с большим разрешением.</li>
+    <li>Перереработан режим синхронизации выравнивания с деревьями.</li>
+    <li>Возвращён упрощённый режим копирования текущего выделения в выравнивании.</li>
+</ul>
+
+<h4>Редактор Последовательностей</h4>
+<ul>
+    <li>Улучшена скорость работы в режиме авто-аннотирования.</li>
+    <li>Исправлены ошибки работы с аннотациями в многострочном режиме.</li>
+    <li>Улучшен парсинг координат при создании аннотаций для круговых последовательностей.</li>
+</ul>
+
+<h4>Остальное</h4>
+<ul>
+    <li>Улучшена скорость и стабильность работы BLAST для маппинга ридов.</li>
+    <li>При работе со сборками по Сэнгеру добавлено автопозиционирование по старту выбранного рида.</li>
+    <li>Исправлены ошибки при выборе файла в Дизайнере Схем для Linux/GTK3.</li>
+    <li>Улучшена общая стабильность и скорость работы UGENE.</li>
 </ul>
