Review related updates

--- a/src/ugeneui/html/version_news_en.html
+++ b/src/ugeneui/html/version_news_en.html
@@ -39,10 +39,10 @@
     <li>Better parsing of overlapping circular sequence regions in the annotation creation dialog.</li>
 </ul>
 
-<h4>Miscellaneous</h4>
+<h4>Other improvements</h4>
 <ul>
     <li>Improved BLAST algorithm speed and resource usage when used for NGS.</li>
-    <li>In Sanger Editor click on a read now centers the read on a screen.</li>
+    <li>In Sanger Editor a double-click on a read name now centers the read sequence on a screen.</li>
     <li>Fixed Linux/GTK3 issue with file dialogs in Workflow Designer.</li>
     <li>A lot of other stability and performance improvements.</li>
 </ul>
