--- a/src/ugeneui/html/version_news_ru.html
+++ b/src/ugeneui/html/version_news_ru.html
@@ -36,13 +36,13 @@
 <ul>
     <li>Улучшена скорость работы в режиме авто-аннотирования.</li>
     <li>Исправлены ошибки работы с аннотациями в многострочном режиме.</li>
-    <li>Улучшен парсинг координат при создании аннотаций для круговых последовательностей.</li>
+    <li>Улучшено распознавание координат при создании аннотаций для круговых последовательностей.</li>
 </ul>
 
-<h4>Остальное</h4>
+<h4>Другие улучшения</h4>
 <ul>
-    <li>Улучшена скорость и стабильность работы BLAST для маппинга ридов.</li>
-    <li>При работе со сборками по Сэнгеру добавлено автопозиционирование по старту выбранного рида.</li>
-    <li>Исправлены ошибки при выборе файла в Дизайнере Схем для Linux/GTK3.</li>
+    <li>Улучшена скорость и стабильность работы BLAST для выравнивания последовательностей.</li>
+    <li>В Редакторе Выравниваний по Сэнгеру двойной клик на имени теперь центрирует последовательность на экране.</li>
+    <li>Исправлены ошибки при выборе файла в Дизайнере Вычислительных Схем для Linux/GTK3.</li>
     <li>Улучшена общая стабильность и скорость работы UGENE.</li>
 </ul>
