UGENE-7093. Update What's new for 38.0

--- a/src/ugeneui/html/version_news_en.html
+++ b/src/ugeneui/html/version_news_en.html
@@ -46,3 +46,10 @@
     <li>Fixed Linux/GTK3 issue with file dialogs in Workflow Designer.</li>
     <li>A lot of other stability and performance improvements.</li>
 </ul>
+<p>
+    A complete list of changes can be found on the <a href="http://ugene.net/changelist.html">UGENE web site</a>.
+</p>
+<p>
+    See also a <a href="https://youtu.be/FnddLWOQgEE">new video</a> about recent
+    improvements in UGENE.
+</p>
