--- a/src/ugeneui/html/version_news_ru.html
+++ b/src/ugeneui/html/version_news_ru.html
@@ -18,14 +18,34 @@
  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
  MA 02110-1301, USA.
 -->
-<h3>Изменения в UGENE версии 39</h3>
+<h3>Изменения в UGENE версии 40</h3>
+
+<h4>Редактор выравниваний</h4>
 <ul>
-    <li style="margin-bottom: 10px;"> Филогенетические деревья: независимая настройка цвета и шрифта для различных частей дерева.</li>
-    <li style="margin-bottom: 10px;"> Опция "Добавить последовательность в выравнивание" получила поддержку выбора алгоритма: ClustalO, MAFFT, Muscle или UGENE.</li>
-    <li style="margin-bottom: 10px;"> Выравнивания с RAW (неопределённым) алфавитом могут быть "исправлены": сконвертированы в DNA, RNA или Amino алфавит.</li>
-    <li style="margin-bottom: 10px;"> Улучшена поддержка Unicode для FASTA, MSF и CLUSTALW форматов.</li>
-    <li style="margin-bottom: 10px;"> Редактор последовательностей получил новую опцию: показ статистики кодонов и аминокислот в выделенном участке.</li>
-    <li style="margin-bottom: 10px;"> UGENE теперь говорит и на турецком. Используйте меню Настройки/Установки для того чтобы сменить язык.</li>
+    <li style="margin-bottom: 10px;"> Добавлена поддержка раздельного выделения последовательностей с CTRL.</li>
+    <li style="margin-bottom: 10px;">Поддержаны все варианты алгоритмов инструмента PhyML.</li>
+    <li style="margin-bottom: 10px;">Реализована возможность перемещения последовательностей в другой документ.</li>
+    <li style="margin-bottom: 10px;">Работа с группами: показан размер и добавлена сортировка по размеру групп.</li>
+</ul>
+
+<h4>Редактор выравниваний по Сэнгеру</h4>
+<ul>
+    <li style="margin-bottom: 10px;">Добавлена возможность просматривать альтернативные мутации.</li>
+    <li style="margin-bottom: 10px;">Исправлены ошибки вертикального скроллинга.</li>
+</ul>
+
+<h4>Редактор последовательностей</h4>
+<ul>
+    <li style="margin-bottom: 10px;">Улучшена скорость работы и точность графиков.</li>
+    <li style="margin-bottom: 10px;">Улучшена работа режима авто-аннотирования.</li>
+    <li style="margin-bottom: 10px;">Исправлены ошибки при работе с файлами более 2Гб.</li>
+</ul>
+
+<h4>Разное</h4>
+<ul>
+    <li style="margin-bottom: 10px;">Улучшена реализация алгоритма Smith-Waterman для CUDA.</li>
+    <li style="margin-bottom: 10px;">Добавлена поддержка Unicode для Newick, Plain text, Diff, VCF, SNP форматов.</li>
+    <li style="margin-bottom: 10px;">Утилита генерации случайной последовательсти теперь работает в разы быстрее.</li>
 </ul>
 
 <p>
