Whats new update

--- a/src/ugeneui/html/version_news_en.html
+++ b/src/ugeneui/html/version_news_en.html
@@ -31,21 +31,21 @@
 <h4>Sanger Editor</h4>
 <ul>
     <li style="margin-bottom: 10px;">A new visualization mode: show alternative mutations.</li>
-    <li style="margin-bottom: 10px;">Vertical scrolling bugs have been fixed.</li>
+    <li style="margin-bottom: 10px;">Several vertical scrolling bugs have been fixed.</li>
 </ul>
 
 <h4>Sequence Viewer</h4>
 <ul>
-    <li style="margin-bottom: 10px;">Improved speed, memory usage and precision of sequence graphs.</li>
-    <li style="margin-bottom: 10px;">Fixed stability problems of auto-annotation routines.</li>
-    <li style="margin-bottom: 10px;">Sequences with sizes above 2Gb now can be opened by UGENE again.</li>
+    <li style="margin-bottom: 10px;">Speed, memory usage and precision of sequence graphs have been improved.</li>
+    <li style="margin-bottom: 10px;">Stability problems of auto-annotation routines have been fixed.</li>
+    <li style="margin-bottom: 10px;">Bugs, which appears while working with sequences larger when 2Gb, have been fixed.</li>
 </ul>
 
 <h4>Other improvements</h4>
 <ul>
-    <li style="margin-bottom: 10px;">Improved CUDA build and error detection support.</li>
-    <li style="margin-bottom: 10px;">Unicode supported was added for Newick, Plain text, Diff, VCF, SNP file formats.</li>
-    <li style="margin-bottom: 10px;">Random Sequence Generator memory footprint and generation speed improvements.</li>
+    <li style="margin-bottom: 10px;">The "Smith-Waterman" algorithm support for CUDA has been improved.</li>
+    <li style="margin-bottom: 10px;">The Unicode support has been added for Newick, Plain text, Diff, VCF, SNP file formats.</li>
+    <li style="margin-bottom: 10px;">The "Random Sequence Generator" memory footprint and generation speed have been improved.</li>
 </ul>
 
 <p>
