Fix typo in Whats new

--- a/src/ugeneui/html/version_news_ru.html
+++ b/src/ugeneui/html/version_news_ru.html
@@ -45,7 +45,7 @@
 <ul>
     <li style="margin-bottom: 10px;">Улучшена реализация алгоритма Smith-Waterman для CUDA.</li>
     <li style="margin-bottom: 10px;">Добавлена поддержка Unicode для Newick, Plain text, Diff, VCF, SNP форматов.</li>
-    <li style="margin-bottom: 10px;">Утилита генерации случайной последовательсти теперь работает в разы быстрее.</li>
+    <li style="margin-bottom: 10px;">Утилита генерации случайной последовательности теперь работает в разы быстрее.</li>
 </ul>
 
 <p>
